# Platformer

./: .gitignore  CMakeLists.txt  README.md  dsds.txt  info.txt  main.cpp
data/: main.db  settings.db
maps/: 0.tmx  1.tmx  2.tmx  3.tmx  4.tmx
maps/tilesets/: 1.tsx
src/core/: config.h  game.h
src/core/private/: config.cpp  game.cpp
src/sprites/: carrot.h  cloud.h  gate.h  heart.h  player.h  spike.h
src/sprites/private/: carrot.cpp  cloud.cpp  gate.cpp  grass.cpp  heart.cpp  player.cpp  spike.cpp
src/tools/: database.h  level.h  map.h  settings.h  sprite.h  table.h  text.h
src/tools/private/: database.cpp  level.cpp  map.cpp  settings.cpp  sprite.cpp  table.cpp  text.cpp
src/ui/: button.h
src/ui/private/: button.cpp
